--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.xiii.dynamic.server</groupId>
     <artifactId>Dynamic.Server</artifactId>
-    <version>1.3.0-PRE</version>
+    <version>1.3.0</version>
     <packaging>jar</packaging>
 
     <name>Dynamic.Server</name>
