--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,11 @@
             <version>1.16-R0.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>zt-zip</artifactId>
+            <version>1.15</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
